| Summary: | ASTERISK-27490: chan_console: 'set active' fails to work | ||
| Reporter: | Tzafrir Cohen (tzafrir) | Labels: | |
| Date Opened: | 2017-12-19 06:06:11.000-0600 | Date Closed: | 2017-12-19 14:21:23.000-0600 |
| Priority: | Minor | Regression? | Yes |
| Status: | Closed/Complete | Components: | Channels/General |
| Versions: | 13.18.4 15.1.4 | Frequency of Occurrence | |
| Related Issues: | |||
| Environment: | Attachments: | ||
| Description: | Chan_console supports multiple "phone" (Console) devices. However the console phone control commands don't allow specifying a device. Hence its CLI has a concept of the "active" device.
However, the command 'console set active' currently fails to work due to a simple bug. To reproduce (no actual device needed): in chan_console: {code} [con1] input_device = fake device 1 output_device = fake device 1 [con2] input_device = fake device 2 output_device = fake device 2 {code} Now load the module. From the CLI you should be able to see both con1 and con2 in 'console show devices'. Now: Expected result: {code} *CLI> console set active con1 The active console device has been set to 'con1' {code} Actual result: {code} *CLI> console set active con1 Could not find a device called 'con1'. Command 'console set active con1' failed. {code} | ||
| Comments: | By: Asterisk Team (asteriskteam) 2017-12-19 06:06:11.935-0600 Thanks for creating a report! The issue has entered the triage process. That means the issue will wait in this status until a Bug Marshal has an opportunity to review the issue. Once the issue has been reviewed you will receive comments regarding the next steps towards resolution. A good first step is for you to review the [Asterisk Issue Guidelines|https://wiki.asterisk.org/wiki/display/AST/Asterisk+Issue+Guidelines] if you haven't already. The guidelines detail what is expected from an Asterisk issue report. Then, if you are submitting a patch, please review the [Patch Contribution Process|https://wiki.asterisk.org/wiki/display/AST/Patch+Contribution+Process]. By: Friendly Automation (friendly-automation) 2017-12-19 14:21:24.737-0600 Change 7656 merged by George Joseph: chan_console: Use correct parameter for 'set active' [https://gerrit.asterisk.org/7656|https://gerrit.asterisk.org/7656] By: Friendly Automation (friendly-automation) 2017-12-19 15:08:22.596-0600 Change 7666 merged by Jenkins2: chan_console: Use correct parameter for 'set active' [https://gerrit.asterisk.org/7666|https://gerrit.asterisk.org/7666] By: Friendly Automation (friendly-automation) 2017-12-19 16:15:07.345-0600 Change 7665 merged by George Joseph: chan_console: Use correct parameter for 'set active' [https://gerrit.asterisk.org/7665|https://gerrit.asterisk.org/7665] | ||